# agent-log

./: .gitignore  CLAUDE.md  OPENCODE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
agentlog/: __init__.py  __main__.py  config.py  repo.py  session.py
agentlog/commands/: __init__.py  config.py  export.py  hook.py  init.py  log.py  prune.py  search.py  show.py  stats.py  status.py  stop.py
agentlog/hooks/: __init__.py  claude.py
agentlog/plugins/: agentlog.ts
agentlog/providers/: __init__.py
agentlog/providers/claude/: __init__.py  init.py  status.py  stop.py
agentlog/providers/opencode/: __init__.py  hooks.py  init.py  status.py  stop.py
agentlog/utils/: __init__.py  session_io.py  time.py
tests/: conftest.py  test_config.py  test_integration.py  test_repo.py  test_session.py
tests/test_commands/: test_config_cmd.py  test_export.py  test_hook.py  test_hook_opencode.py  test_init.py  test_log.py  test_prune.py  test_search.py  test_show.py  test_stats.py  test_status.py  test_stop.py
tests/test_hooks/: test_claude.py  test_opencode.py
