[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-agent-log"
version = "0.1.1"
description = "Session logging for Claude Code"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
]

[project.scripts]
agentlog = "agentlog.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agentlog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
